--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,6 @@
-VITE_SUPABASE_URL=
-VITE_SUPABASE_ANON_KEY=
+# Supabase Configuration
+# 从 Supabase Dashboard (https://app.supabase.com) 获取这些值
+# Settings → API → Project URL 和 anon/public key
+
+VITE_SUPABASE_URL=your_supabase_project_url_here
+VITE_SUPABASE_ANON_KEY=your_supabase_anon_key_here
